# shapeshifter

./: .gitignore  CHANGES.md  README.md  dune-project  shapeshifter.opam
bench/: bench.ml  dune
lib/: dune  shapeshifter.ml  unsafe_buffer.c  unsafe_buffer.ml  unsafe_buffer.mli
test/: dune  unsafe_buffer_test.ml
